# QMathematics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  equation_database.sql
cmake/: FindGSL.cmake  FindQwt.cmake
docs/: Doxyfile
plugins/: CMakeLists.txt  plugin_interface.hpp  plugin_probability.hpp
plugins/bisection/: CMakeLists.txt  bisection.cpp  bisection.hpp
plugins/cdbinrnk/: CMakeLists.txt  cdbinrnk.cpp  cdbinrnk.hpp  diehard_rank_6x8.cpp  libdieharder.hpp  rank.cpp  static_get_bits.cpp  vtest.cpp  vtest.hpp
src/: CMakeLists.txt  main.cpp
src/database_helper/: database_helper.cpp  database_helper.hpp
src/dialogs/qsql_connection_dialog/: qsql_connection_dialog.cpp  qsql_connection_dialog.hpp  qsql_connection_dialog.ui
src/dialogs/select_task_dialog/: select_task_dialog.cpp  select_task_dialog.hpp  select_task_dialog.ui
src/main_window/: main_window.cpp  main_window.hpp
src/tasks/: task.hpp  type_task.hpp
src/tasks/equation/: equation.cpp  equation.hpp
src/tasks/equation/equation_widget/: equation_widget.cpp  equation_widget.hpp  equation_widget.ui
src/tasks/equation/plot_dialog/: plot_dialog.cpp  plot_dialog.hpp  plot_dialog.ui
src/tasks/equation/type_task_equation/: type_task_equation.cpp  type_task_equation.hpp
src/tasks/probability/: probability.cpp  probability.hpp
src/tasks/probability/probability_widget/: probability_widget.cpp  probability_widget.hpp  probability_widget.ui
src/tasks/probability/type_task_probability/: type_task_probability.cpp  type_task_probability.hpp
src/tasks/task_factory/: task_factory.cpp  task_factory.hpp
